--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <h2>Parking Allocation</h2>
-    <button onclick="handleAuthClick()">Authorize</button> <!-- OAuth Button -->
+    <button onclick="initGIS()">Authorize</button> <!-- OAuth Button -->
     <div class="grid" id="parkingGrid"></div>
 
     <div id="parkPopup" class="popup hidden">
