--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -196,7 +196,7 @@
             document.getElementById("emptyPopup").classList.add("hidden");
         }
 
-        initGS();
+        initGIS();
     </script>
 </body>
 </html>
