--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <h2>Hubtown Heaven Small Parking</h2>
-    <button id="authorizeBtn" onclick="initGIS()">Authorize</button>
+    <div id="authorizeBtn"><button onclick="initGIS()">Authorize</button></div>
     <div class="grid" id="parkingGrid"></div>
 
     <div id="parkPopup" class="popup hidden">
