--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -93,7 +93,7 @@
               console.log('Reusing stored access token:', storedToken);
               fetchParkingData();
               const authBtn = document.getElementById("authorizeBtn");
-              authBth.classList.add("hidden");
+              authBtn.classList.add("hidden");
               return ;
             }
             
