--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -50,10 +50,18 @@
             box-shadow: 2px 2px 10px gray;
             font-size: 12px; /* Reduce font size for better fit */
         }
-        .popup label, .popup select, .popup button {
+        .popup label, .popup button {
             display: block;
             margin-top: 10px;
         }
+
+        .popup select {
+            display: block;
+            margin-top: 10px;            
+            font-size: 18px; /* Increase font size */
+            padding: 8px; /* Add padding for better touch experience */
+        }
+
     </style>
 </head>
 <body>
