--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -57,7 +57,9 @@
 
         .popup select {
             display: block;
-            margin-top: 10px;            
+            margin-top: 10px;
+            font-size: 18px; /* Increase font size */
+            padding: 8px; /* Add padding for better touch experience */
         }
 
     </style>
