--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parking Allocation</title>
+    <title>Hubtown Heaven Small Parking</title>
     <script src="https://accounts.google.com/gsi/client"></script>
     <style>
         .grid {
@@ -61,6 +61,18 @@
             font-size: 18px; /* Increase font size */
             padding: 8px; /* Add padding for better touch experience */
         }
+
+        h2 {
+            font-size: 24px; /* Large and readable */
+            font-weight: bold; /* Strong emphasis */
+            text-align: center; /* Centered for balance */
+            color: #333; /* Dark gray for a refined look */
+            margin-bottom: 20px; /* Space below the title */
+            text-transform: uppercase; /* Optional: Makes text all caps */
+            letter-spacing: 1px; /* Adds spacing for a sleek appearance */
+            font-family: 'Arial', sans-serif; /* Professional font */
+        }
+
 
     </style>
 </head>
