--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hubtown Heaven Small Parking</title>
+    <title>Hubtown Heaven Parking</title>
     <script src="https://accounts.google.com/gsi/client"></script>
     <style>
         .grid {
@@ -63,7 +63,7 @@
         }
 
         h2 {
-            font-size: 24px; /* Large and readable */
+            font-size: 20px; /* Large and readable */
             font-weight: bold; /* Strong emphasis */
             text-align: center; /* Centered for balance */
             color: #333; /* Dark gray for a refined look */
@@ -77,7 +77,7 @@
     </style>
 </head>
 <body>
-    <h2>Hubtown Heaven Small Parking</h2>
+    <h2>Hubtown Heaven Parking</h2>
     <div id="authorizeBtn"><button onclick="initGIS()">Authorize</button></div>
     <div class="grid" id="parkingGrid"></div>
 
