--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -165,7 +165,7 @@
                 for (let c = 1; c <= 4; c++) {
                     const slot = r === 7 ? `70${c}` : r * 100 + c;
                     const cell = document.createElement("div");
-                    cell.className = `cell ${c === 4 && r < 7 ? "disabled" : (parkingData[slot] == "" || !parkingData[slot]) ?  "empty" : "occupied"}`;
+                    cell.className = `cell ${c === 4 && r < 7 ? "disabled" : (parkingData[slot] === "" || !parkingData[slot] || parkingData[slot] === "Empty") ?  "empty" : "occupied"}`;
                     
                     if (c === 4 && r < 7) {
                         cell.textContent = "";
