--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -53,6 +53,7 @@
         .popup label, .popup button {
             display: block;
             margin-top: 10px;
+            font-size: 18px; /* Increase font size */
         }
 
         .popup select {
