--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -106,7 +106,7 @@
 
     <div id="emptyPopup" class="popup hidden">
         <p>Empty the parking slot?</p>
-        <button onclick="emptySlot()">OK</button>
+        <button onclick="emptySlot()">OK</button><BR/><BR/>
         <button onclick="closePopup()">Cancel</button>
     </div>
 
