--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -59,7 +59,7 @@
         .popup button {
             display: block;
             margin-top: 10px;
-            font-size: 30px; /* Increase font size */
+            font-size: 32px; /* Increase font size */
         }
         
         .popup select {
@@ -96,10 +96,10 @@
                 <option value="B">B</option>
                 <option value="C">C</option>
             </select>
-        </label>
+        </label><BR/>
         <label>Flat: 
             <select id="flatSelect" onchange="hideAlert()"></select>
-        </label>
+        </label><BR/>
         <button onclick="parkCar()">Park</button> <BR/><BR/>
         <button onclick="closePopup()">Cancel</button>
     </div>
