--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -36,7 +36,7 @@
         }
 
         .empty { background-color: green; color: white; }
-        .occupied { background-color: white; color: red; }
+        .occupied { background-color: red; color: white; }
         .disabled { background-color: grey; color: white; cursor: default; }
         .hidden { display: none; }
         .popup {
